--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "gsap": "^3.12.5",
     "md5": "^2.3.0",
     "pinia": "^2.0.11",
-    "quasar": "^2.8.0",
+    "quasar": "^2.15.1",
     "sweetalert2": "^11.10.4",
     "vue": "^3.2.29",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
-    "@quasar/app-webpack": "^3.9.2",
+    "@quasar/app-webpack": "^3.12.4",
     "eslint": "^8.11.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^9.0.0",
@@ -45,7 +45,7 @@
     "last 5 Opera versions"
   ],
   "engines": {
-    "node": "^20 || ^18 || ^16",
+    "node": "^21",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
